feat: Add services page and fix main index.html content

--- a/index.html
+++ b/index.html
@@ -7,12 +7,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Pusula İklimlendirme - Web Sitesi Tasarımı</h1>
+    <nav class="navbar">
+        <div class="container">
+            <a href="index.html" class="logo">
+                Pusula İklimlendirme
+            </a>
+            <ul class="nav-links">
+                <li><a href="index.html">Anasayfa</a></li>
+                <li><a href="services.html">Hizmetlerimiz</a></li>
+                <li><a href="about.html">Hakkımızda</a></li>
+                <li><a href="contact.html">İletişim</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="hero">
+        <div class="container">
+            <h1>Profesyonel İklimlendirme Çözümleri</h1>
+            <p>Güvenilir, hızlı ve garantili servis hizmetleri.</p>
+            <a href="contact.html" class="cta-button">Hemen Teklif Al</a>
+        </div>
     </header>
-    
-    <main>
-        <p>Ana renk paletimiz burada test edilecek.</p>
-    </main>
+
+    <section class="services-summary">
+        <div class="container">
+            <h2>Başlıca Hizmetlerimiz</h2>
+            <div class="service-cards">
+                <div class="card">
+                    <h3>Klima Montajı</h3>
+                    <p>Her marka ve model klima için profesyonel montaj.</p>
+                </div>
+                <div class="card">
+                    <h3>Periyodik Bakım</h3>
+                    <p>Cihazlarınızın ömrünü uzatan detaylı bakım hizmetleri.</p>
+                </div>
+                <div class="card">
+                    <h3>Arıza Tespiti ve Onarım</h3>
+                    <p>Uzman ekibimizle hızlı arıza tespiti ve garantili onarım.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Pusula İklimlendirme. Tüm hakları saklıdır.</p>
+            </div>
+    </footer>
+
 </body>
 </html>
